cleanup with records